--- a/Roofus/src/css/quasar.variables.scss
+++ b/Roofus/src/css/quasar.variables.scss
@@ -22,3 +22,16 @@ $positive  : #21BA45;
 $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
+
+
+// custom variables
+
+// for backgrond
+$bg-color : #ECECEC;
+
+// for color
+$primary-color : #B65207;
+
+$main-font-color: #525252;
+
+$white: #fff;
