--- a/Roofus/src/css/quasar.variables.scss
+++ b/Roofus/src/css/quasar.variables.scss
@@ -13,25 +13,24 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary   : #1976D2;
-$secondary : #26A69A;
+$secondary : #525252;
 $accent    : #9C27B0;
 
-$dark      : #1D1D1D;
-
-$positive  : #21BA45;
-$negative  : #C10015;
+$dark      : #3D3C35;
+$light     : #E5E5E5;
+$positive  : #52A50E;
+$negative  : #CF2222;
 $info      : #31CCEC;
 $warning   : #F2C037;
 
+$white: #fff;
+$black: #000;
 
-// custom variables
-
-// for backgrond
 $bg-color : #ECECEC;
 
-// for color
 $primary-color : #B65207;
-
 $main-font-color: #525252;
 
-$white: #fff;
+$border : #E0E0E0;
+
+
