--- a/Roofus/src/css/app.scss
+++ b/Roofus/src/css/app.scss
@@ -5,6 +5,17 @@
 }
 body {
   font-family: "Poppins", sans-serif;
+  background-color: $bg-color;
+}
+
+// custom scroll bar
+body::-webkit-scrollbar {
+	background-color: $grey ;
+  width: 3px !important;
+}
+.q-dialog__inner > div::-webkit-scrollbar {
+	background-color: $grey ;
+  width: 3px !important;
 }
 
 // tabbing
@@ -110,6 +121,22 @@ body.desktop .q-focusable:focus > .q-focus-helper, body.desktop .q-manual-focusa
 }
 
 
+// dropdown
+.profile-image .q-icon.q-btn-dropdown__arrow:after{
+  content: '';
+  background-image: url('/src/assets/down-arrow.png');
+  width: 13px;
+  height: 13px;
+  align-items: center;
+  display: flex;
+  background-repeat: no-repeat;
+  position: absolute;
+  left: 100%;
+  top: -28px;
+  margin-left: 10px;
+  bottom: 0;
+  margin: auto auto auto 10px;
+}
 
 
 // *************************************************************************
@@ -345,14 +372,16 @@ body.desktop .q-focusable:focus > .q-focus-helper, body.desktop .q-manual-focusa
   // PAYMENT SRCREEN
   .payment-screen {
     .make-payment-desktop{display: none;}
-    .make-payment-mobile{display: inline-block !important;}
+    .make-payment-mobile{display: inline-block !important;margin-top: 10px;}
     .container-box {
       max-width: 100%;
-      padding: 0px 30px;
+      padding: 0px 25px;
+      margin-top: 20px;
     }
     .steup-form{
       max-width: 100%;
     }
+    .setup-panel .q-card{margin-top: 10px;}
   }
 
 }
